# vingi

./: INSTALLATION.md  Makefile  Package.swift  README.md  pyproject.toml  requirements.txt  setup.py
apps/macos/Vingi/Views/: AutomationView.swift  ExplorationView.swift
config/: config.template.yml
docs/package/: cognitive_patterns.md  components.md  installation.md  setup.md  structure.md
docs/projects/: combine_harverster.md  foursidedtriangle.md  gospel.md  homo-veloce.md  kwasa-kwasa.md  purpose.md  sighthound.md  trebuchet.md  wealth.md
examples/: cognitive_pattern_demo.py
src/core/VingiCore/Sources/VingiCore/: VingiCore.swift
src/core/VingiCore/Sources/VingiCore/Automation/: DecisionEngine.swift
src/core/VingiCore/Sources/VingiCore/Configuration/: VingiConfiguration.swift
src/core/VingiCore/Sources/VingiCore/Intelligence/: CognitivePatternDetector.swift  ExplorationEngine.swift  SelectiveAbilityRecognitionEngine.swift  TaskBreakdownEngine.swift  TripPlanningSpecialist.swift
src/core/VingiCore/Sources/VingiCore/Models/: DataTypes.swift
src/core/VingiCore/Sources/VingiCore/Views/: CognitivePatternDashboardView.swift  CognitivePatternExampleView.swift  SelectiveAbilityView.swift
src/core/VingiCore/Tests/VingiCoreTests/: CognitivePatternTests.swift
src/python/vingi/: __init__.py  advanced_cognitive_optimizer.py  atomic_temporal_engine.py  cli.py  cognitive_engine.py  config.py  decision_optimizer.py  genomic_cognitive_engine.py  master_orchestrator.py  multi_domain_orchestrator.py  quantum_validation_engine.py  sophisticated_cli.py  specialized_domain_engine.py  vingi_core.py
src/python/vingi/cli/: main.py
src/python/vingi/core/: __init__.py  context_graph.py  pattern_recognition.py  relevance_scoring.py  temporal_analysis.py
src/python/vingi/utils/: logging.py
tests/: test_integration.py
